Fixed Website to fit wanted design
Ready to be worked on from home office

--- a/index.html
+++ b/index.html
@@ -22,19 +22,49 @@
     <nav>
       <ol>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Aboutme.html">About me</a></li>
-        <li><a href="Skills.html">Skillset</a></li>
-        <li><a href="Resume.html">Resume</a></li>
-        <li><a href="Contacts.html">Contact</a></li>
+        <li><a href="#About.me">About me</a></li>
+        <li><a href="#Skillset">Skillset</a></li>
+        <li><a href="#Resume">Resume</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ol>
     </nav>
     <h1>Caleb J Snow Online Porfolio</h1>
   </header>
 
-  <section>
+  <img src="background.jpg" alt="">
 
+  <aside>
+    <p>
+      Hello, Welcome to my website! My name is Caleb Snow and I am a web developer and long term coding student going
+      into the industry (For more information visit the About Me link at the top of the page).
+    </p>
+  </aside>
+  <section id="About.me">
+    <article>
+      <h1>About Me</h1>
+      <p></p>
+    </article>
+  </section>
+  <section id="Skillset">
+    <article>
+      <h1>My Skillset</h1>
+      <p></p>
+    </article>
+  </section>
+  <section id="Resume">
+    <article>
+      <h1>My Resume</h1>
+      <p></p>
+    </article>
+  </section>
+  <section id="Contact">
+    <article>
+      <h1>Contact Me</h1>
+      <p></p>
+    </article>
   </section>
 
+  <footer></footer>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
