Added HTML and CSS
Added different HTML pages and did CSS styles and added some files

--- a/index.html
+++ b/index.html
@@ -21,53 +21,26 @@
 
   <header>
     <div class="Mainmenu">
-      <a href="#Contact">Contact</a>
-      <a href="#Resume">Resume</a>
-      <a href="#Skillset">Skillset</a>
-      <a href="#About.me">About me</a>
+      <a href="contact.html">Contact</a>
+      <a href="resume.html">Resume</a>
+      <a href="skillset.html">Skillset</a>
+      <a href="aboutme.html">About me</a>
       <a href="index.html">Home</a>
     </div>
-    <h1>Caleb J Snow Online Porfolio</h1>
+    <h1>Caleb J Snow</h1>
   </header>
 
-<div class="main">
-  <section id="About.me">
-    <article>
-      <h1>About Me</h1>
-      <p></p>
-    </article>
-  </section>
-  <section id="Skillset">
-    <article>
-      <h1>My Skillset</h1>
-      <p></p>
-    </article>
-  </section>
-  <section id="Resume">
-    <article>
-      <h1>My Resume</h1>
-      <p></p>
-    </article>
-  </section>
-  <section id="Contact">
-    <article>
-      <h1>Contact Me</h1>
-      <p></p>
-    </article>
-  </section>
-</div>
-
   <footer class="foot">
-     <p>2018 Caleb J Snow. All Rights Reserved.</p>
-<!-- Inside navigation tags will be social media links attached to their corresponding
+    <p>2018 Caleb J Snow. All Rights Reserved.</p>
+    <!-- Inside navigation tags will be social media links attached to their corresponding
  icons such as Facebook link with Facebook icon -->
-     <nav>
-       <ul>
-         <!-- <li><a href=""><img id="fbicon" src="fbicon.png" alt="" /></a></li>
+    <nav>
+      <ul>
+        <!-- <li><a href=""><img id="fbicon" src="fbicon.png" alt="" /></a></li>
          <li><a href=""><img id="twittericon" src="twittericon.png" alt="" /></a></li>
          <li><a href=""></a></li> -->
-       </ul>
-     </nav>
+      </ul>
+    </nav>
   </footer>
 
 
