Fixing all base designs and adding fonts
I made an extremely huge improvement on my website which includes adding multiple personal design features to better the website's special look

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact Me</title>
+    <title>Contact</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -12,28 +12,29 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="grids.css">
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="grids.css" />
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
 
     <header>
-        <div class="Mainmenu">
+        <nav class="Mainmenu">
             <a href="contact.html">Contact</a>
             <a href="resume.html">Resume</a>
             <a href="skillset.html">Skillset</a>
-            <a href="aboutme.html">About me</a>
+            <a href="about.html">About</a>
             <a href="index.html">Home</a>
-        </div>
-        <h1>My Contacts</h1>
+        </nav>
+        <!-- <h1>My Contacts</h1> -->
     </header>
 
     <div class="main">
         <section id="Contact">
             <article>
-                <h1>Contact Me</h1>
                 <p></p>
             </article>
         </section>
