--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="grids.css">
+  <link rel="stylesheet" href="normalize.css" />
+  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="grids.css" />
+  <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
 
-  <header>
-    <div class="Mainmenu">
+  <header class="Mainheader">
+    <nav class="Mainmenu">
       <a href="contact.html">Contact</a>
       <a href="resume.html">Resume</a>
       <a href="skillset.html">Skillset</a>
-      <a href="aboutme.html">About me</a>
+      <a href="about.html">About</a>
       <a href="index.html">Home</a>
-    </div>
-    <h1>Caleb J Snow</h1>
+    </nav>
+    <h1>Hello, I'm Caleb Snow.<br/> 
+      I'm a Junior Web Developer.
+    </h1>
   </header>
 
   <footer class="foot">
