--- a/index.html
+++ b/index.html
@@ -21,14 +21,25 @@
 
 <body>
 
-  <header class="Mainheader">
+    <header class="Mainheader">
+        <nav class="Mainmenu">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="skillset.html">Skillset</a>
+          <a href="resume.html">Resume</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+
+<!-- To change the top nav bar back to the far right  -->
+
+  <!-- <header class="Mainheader">
     <nav class="Mainmenu">
       <a href="contact.html">Contact</a>
       <a href="resume.html">Resume</a>
       <a href="skillset.html">Skillset</a>
       <a href="about.html">About</a>
       <a href="index.html">Home</a>
-    </nav>
+    </nav> -->
     <h1>Hello, I'm Caleb Snow.<br/> 
       I'm a Junior Web Developer.
     </h1>
