--- a/resume.html
+++ b/resume.html
@@ -21,15 +21,25 @@
 
 <body>
 
-    <header>
-        <nav class="Mainmenu">
-            <a href="contact.html">Contact</a>
-            <a href="resume.html">Resume</a>
-            <a href="skillset.html">Skillset</a>
-            <a href="about.html">About</a>
-            <a href="index.html">Home</a>
-        </nav>
-        <!-- <h1>My Online Resume</h1> -->
+    <header class="Mainheader">
+            <nav class="Mainmenu">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="skillset.html">Skillset</a>
+                <a href="resume.html">Resume</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        
+        <!-- To change the top nav bar back to the far right  -->
+        
+          <!-- <header class="Mainheader">
+            <nav class="Mainmenu">
+              <a href="contact.html">Contact</a>
+              <a href="resume.html">Resume</a>
+              <a href="skillset.html">Skillset</a>
+              <a href="about.html">About</a>
+              <a href="index.html">Home</a>
+            </nav> -->
     </header>
 
     <div class="main">
