--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html>
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Caleb J Snow</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="grids.css" />
   <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
 
-    <header class="Mainheader">
-        <nav class="Mainmenu">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="skillset.html">Skillset</a>
-          <a href="resume.html">Resume</a>
-          <a href="contact.html">Contact</a>
-        </nav>
+  <header class="Mainheader">
+    <nav class="Mainmenu">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="skillset.html">Skillset</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
-<!-- To change the top nav bar back to the far right  -->
+    <!-- To change the top nav bar back to the far right  -->
 
-  <!-- <header class="Mainheader">
+    <!-- <header class="Mainheader">
     <nav class="Mainmenu">
       <a href="contact.html">Contact</a>
       <a href="resume.html">Resume</a>
@@ -40,7 +33,7 @@
       <a href="about.html">About</a>
       <a href="index.html">Home</a>
     </nav> -->
-    <h1>Hello, I'm Caleb Snow.<br/> 
+    <h1>Hello, I'm Caleb Snow.<br />
       I'm a Junior Web Developer.
     </h1>
   </header>
