--- a/index.html
+++ b/index.html
@@ -5,35 +5,31 @@
   <meta charset="utf-8" />
   <title>Caleb J Snow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="main.css" />
   <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="navicon.css" />
 </head>
 
 <body>
 
-  <header class="Mainheader">
-    <nav class="Mainmenu">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="skillset.html">Skillset</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <header class="Mainheader">
+        <nav class="Mainmenu">
+          <a href="#" id="navicon">
+            <img src="navicon.png" alt="" />
+          </a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skillset.html">Skillset</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
 
-    <!-- To change the top nav bar back to the far right  -->
+        </nav>
 
-    <!-- <header class="Mainheader">
-    <nav class="Mainmenu">
-      <a href="contact.html">Contact</a>
-      <a href="resume.html">Resume</a>
-      <a href="skillset.html">Skillset</a>
-      <a href="about.html">About</a>
-      <a href="index.html">Home</a>
-    </nav> -->
-    <h1>Hello, I'm Caleb Snow.<br />
+    <h1>Hello, I'm Caleb Snow.<br/> 
       I'm a Junior Web Developer.
     </h1>
   </header>
@@ -51,33 +47,6 @@
     </nav>
   </footer>
 
-
-
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
-  </script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () {
-      ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto');
-    ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
