Moved all content into the web pages
Pretty much finished all HTML and working on CSS

--- a/about.html
+++ b/about.html
@@ -28,13 +28,33 @@
   
           </nav>
       </header>
-    <div class="main">
+
         <section id="About.me">
+            <h1>About Me</h1>
+            <img src="" alt="">
             <article>
-                <p></p>
+                <h1>My Mission</h1>
+                <p>My mission in life as well as in the industry is to be a successful hardworking individual with whatever I work on.
+                Weather it’s in a group or some separate project I enovate with my fellow peers and make a beautiful, spectacular,
+                and all around highly functional code to design the website the way the person or company wants it to look.
+                </p>
+
+                <h1>My Background</h1>
+                <p>I was born and raised in Phoenix, Arizona, I am a Greenway High School Graduate of 2020 with an advanced diploma. 
+                During the junior and senior years of my high school experience I attended West-MEC for Coding and that was my first
+                experience with code and that’s when I finally found out if code was something I wanted to do for the rest of my life,
+                and to this day I still enjoy coding no matter the language or the difficulty. I am a junior developer and I want to 
+                achieve as much as I can in this industry no matter the cost, because this is my passion.
+                </p>
+
+                <h1>My Plans for the future</h1>
+                <p>My plans for the future are to go on to be a senior developer for a company that I may find to share the same goals 
+                as me. I plan to be a determined, hardworking, and credible worker for my future jobs and past. No matter the objective
+                I still find a way to get things done with maximum effort and heart. I promise to be the employee or business partner 
+                you have always wanted and you can count on that.
+                </p>
             </article>
         </section>
-    </div>
 
     <footer class="foot">
         <p>2018 Caleb J Snow. All Rights Reserved.</p>
