--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,18 @@
     </header>
     <div class="main">
         <section id="Contact">
+            <h1>Questions?</h1>
             <article>
-                <p></p>
+                <p>If you have any questions or are looking for a developer just send me an email and I will get back to you as soon as possible</p>
+                    <a id="foxyform_embed_link_939910" href="http://www.foxyform.com/">foxyform</a>
+                    <script type="text/javascript">
+                    (function(d, t){
+                       var g = d.createElement(t),
+                           s = d.getElementsByTagName(t)[0];
+                       g.src = "http://www.foxyform.com/js.php?id=939910&sec_hash=dca9ec3c48c&width=350px";
+                       s.parentNode.insertBefore(g, s);
+                    }(document, "script"));
+                    </script>
             </article>
         </section>
     </div>
@@ -48,7 +58,6 @@
             </ul>
         </nav>
     </footer>
-
 </body>
 
 </html>
