--- a/resume.html
+++ b/resume.html
@@ -30,8 +30,35 @@
       </header>
     <div class="main">
         <section id="Resume">
+            <h1>My Resume</h1>
             <article>
-                <p></p>
+                <h1>Personal Profile</h1>
+                <p>I am a hardworking leader and first year Coding student who is 
+                good at managing alongside a team and precise with my work. 
+                Seeking the position of Web developer and other various coding jobs. 
+                </p>
+
+                <h1>Knowledge, Skills, and Abilities</h1>
+                <ul>
+                    <li> Judgment and Decision Making — Considering the relative costs and benefits of potential actions to choose the most appropriate one.</li>
+                    <li> Monitoring — Monitoring/Assessing performance of yourself, other individuals, or organizations to make improvements or take corrective action.</li>
+                    <li> Critical Thinking — Using logic and reasoning to identify the strengths and weaknesses of alternative solutions, conclusions or approaches to problems.</li>
+                    <li> Active Listening — Giving full attention to what other people are saying, taking time to understand the points being made, asking questions as 
+                    appropriate, and not interrupting at inappropriate times.</li>
+                    <li> Complex Problem Solving — Identifying complex problems and reviewing related information to develop and evaluate options and implement solutions.</li>
+                </ul>
+
+                <h1>My Education</h1>
+                <p>Greenway High School	Phoenix, AZ <br>
+                Expected Grad Date: May 2020 <br>
+                West-MEC Coding Program      GPA: 4.0 <br>
+                Relevant Coursework: Spanish 1-2/3-4, Drafting and Designing Technology <br>
+                </p>
+
+                <h1>Extracurricular Activities</h1>
+                <p>FBLA - Future business Leaders of America		Fall 2018 <br>
+                Member since 2018 and I have learned mass amounts of leadership skills and how to run a team of highly credible and strong leaders.
+                </p>
             </article>
         </section>
     </div>
