--- a/contact.html
+++ b/contact.html
@@ -2,47 +2,48 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>Contact</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="normalize.css" />
-  <link rel="stylesheet" href="main.css" />
-  <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="navicon.css" />
+    <meta charset="utf-8" />
+    <title>Contact</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="navicon.css" />
 </head>
 
 <body>
 
     <header class="Mainheader">
         <nav class="Mainmenu">
-          <a href="#" id="navicon">
-            <img src="navicon.png" alt="" />
-          </a>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
+            <a href="#" id="navicon">
+                <img src="navicon.png" alt="" />
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
 
         </nav>
     </header>
     <div class="main">
         <section id="Contact">
             <h1>Questions?</h1>
-            <article>
-                <p>If you have any questions or are looking for a developer just send me an email and I will get back to you as soon as possible</p>
-                    <a id="foxyform_embed_link_939910" href="http://www.foxyform.com/">foxyform</a>
-                    <script type="text/javascript">
-                    (function(d, t){
-                       var g = d.createElement(t),
-                           s = d.getElementsByTagName(t)[0];
-                       g.src = "http://www.foxyform.com/js.php?id=939910&sec_hash=dca9ec3c48c&width=350px";
-                       s.parentNode.insertBefore(g, s);
+            <aside>
+                <p>If you have any questions or are looking for a developer just send me an email and I will get back
+                    to you as soon as possible</p>
+                <a id="foxyform_embed_link_939910" href="http://www.foxyform.com/">foxyform</a>
+                <script type="text/javascript">
+                    (function (d, t) {
+                        var g = d.createElement(t),
+                            s = d.getElementsByTagName(t)[0];
+                        g.src = "http://www.foxyform.com/js.php?id=939910&sec_hash=dca9ec3c48c&width=350px";
+                        s.parentNode.insertBefore(g, s);
                     }(document, "script"));
-                    </script>
-            </article>
+                </script>
+            </aside>
         </section>
     </div>
 
