Commit to home office
Ready to work on from home

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,8 @@
 
 <body>
 
-    <header class="Mainheader">
+    <header>
         <nav class="Mainmenu">
-            <a href="#" id="navicon">
-                <img src="navicon.png" alt="" />
-            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -28,24 +25,22 @@
 
         </nav>
     </header>
-    <div class="main">
-        <section id="Contact">
-            <h1>Questions?</h1>
-            <aside>
-                <p>If you have any questions or are looking for a developer just send me an email and I will get back
-                    to you as soon as possible</p>
-                <a id="foxyform_embed_link_939910" href="http://www.foxyform.com/">foxyform</a>
-                <script type="text/javascript">
-                    (function (d, t) {
-                        var g = d.createElement(t),
-                            s = d.getElementsByTagName(t)[0];
-                        g.src = "http://www.foxyform.com/js.php?id=939910&sec_hash=dca9ec3c48c&width=350px";
-                        s.parentNode.insertBefore(g, s);
-                    }(document, "script"));
-                </script>
-            </aside>
-        </section>
-    </div>
+    <section id="Contact">
+        <h1>Questions?</h1>
+        <aside>
+            <p>If you have any questions or are looking for a developer just send me an email and I will get back
+                to you as soon as possible</p>
+            <a id="foxyform_embed_link_939910" href="http://www.foxyform.com/">foxyform</a>
+            <script type="text/javascript">
+                (function (d, t) {
+                    var g = d.createElement(t),
+                        s = d.getElementsByTagName(t)[0];
+                    g.src = "http://www.foxyform.com/js.php?id=939910&sec_hash=dca9ec3c48c&width=350px";
+                    s.parentNode.insertBefore(g, s);
+                }(document, "script"));
+            </script>
+        </aside>
+    </section>
 
     <footer class="foot">
         <p>2018 Caleb J Snow. All Rights Reserved.</p>
