--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="flex.css" />
   <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="navicon.css" />
@@ -15,23 +14,23 @@
 
 <body>
 
-    <header class="Mainheader">
-        <nav class="Mainmenu">
-          <a href="#" id="navicon">
-            <img src="navicon.png" alt="" />
-          </a>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
+  <header>
+    <nav class="Mainmenu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <h1>Hello, I'm Caleb Snow.<br/> 
+  <article class="mainpage">
+    <h1>Hello, I'm Caleb Snow.<br />
       I'm a Junior Web Developer.
     </h1>
-  </header>
+  </article>
+
 
   <footer class="foot">
     <p>2018 Caleb J Snow. All Rights Reserved.</p>
