--- a/resume.html
+++ b/resume.html
@@ -10,54 +10,57 @@
     <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Permanent+Marker|Shadows+Into+Light" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="navicon.css" />
-  </head>
-  
-  <body>
-  
-      <header class="Mainheader">
-          <nav class="Mainmenu">
-            <a href="#" id="navicon">
-              <img src="navicon.png" alt="" />
-            </a>
+</head>
+
+<body>
+
+    <header>
+        <nav class="Mainmenu">
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="resume.html">Resume</a></li>
-              <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-  
-          </nav>
-      </header>
-    <div class="main">
+
+        </nav>
+    </header>
+    <div>
         <section id="Resume">
             <h1>My Resume</h1>
-            <article>
+            <article class="main">
                 <h1>Personal Profile</h1>
-                <p>I am a hardworking leader and first year Coding student who is 
-                good at managing alongside a team and precise with my work. 
-                Seeking the position of Web developer and other various coding jobs. 
+                <p>I am a hardworking leader and first year Coding student who is
+                    good at managing alongside a team and precise with my work.
+                    Seeking the position of Web developer and other various coding jobs.
                 </p>
 
                 <h1>Knowledge, Skills, and Abilities</h1>
                 <ul>
-                    <li> Judgment and Decision Making — Considering the relative costs and benefits of potential actions to choose the most appropriate one.</li>
-                    <li> Monitoring — Monitoring/Assessing performance of yourself, other individuals, or organizations to make improvements or take corrective action.</li>
-                    <li> Critical Thinking — Using logic and reasoning to identify the strengths and weaknesses of alternative solutions, conclusions or approaches to problems.</li>
-                    <li> Active Listening — Giving full attention to what other people are saying, taking time to understand the points being made, asking questions as 
-                    appropriate, and not interrupting at inappropriate times.</li>
-                    <li> Complex Problem Solving — Identifying complex problems and reviewing related information to develop and evaluate options and implement solutions.</li>
+                    <li> Judgment and Decision Making — Considering the relative costs and benefits of potential
+                        actions to choose the most appropriate one.</li>
+                    <li> Monitoring — Monitoring/Assessing performance of yourself, other individuals, or organizations
+                        to make improvements or take corrective action.</li>
+                    <li> Critical Thinking — Using logic and reasoning to identify the strengths and weaknesses of
+                        alternative solutions, conclusions or approaches to problems.</li>
+                    <li> Active Listening — Giving full attention to what other people are saying, taking time to
+                        understand the points being made, asking questions as
+                        appropriate, and not interrupting at inappropriate times.</li>
+                    <li> Complex Problem Solving — Identifying complex problems and reviewing related information to
+                        develop and evaluate options and implement solutions.</li>
                 </ul>
 
                 <h1>My Education</h1>
-                <p>Greenway High School	Phoenix, AZ <br>
-                Expected Grad Date: May 2020 <br>
-                West-MEC Coding Program      GPA: 4.0 <br>
-                Relevant Coursework: Spanish 1-2/3-4, Drafting and Designing Technology <br>
+                <p>Greenway High School Phoenix, AZ <br>
+                    Expected Grad Date: May 2020 <br>
+                    West-MEC Coding Program GPA: 4.0 <br>
+                    Relevant Coursework: Spanish 1-2/3-4, Drafting and Designing Technology <br>
                 </p>
 
                 <h1>Extracurricular Activities</h1>
-                <p>FBLA - Future business Leaders of America		Fall 2018 <br>
-                Member since 2018 and I have learned mass amounts of leadership skills and how to run a team of highly credible and strong leaders.
+                <p>FBLA - Future business Leaders of America Fall 2018 <br>
+                    Member since 2018 and I have learned mass amounts of leadership skills and how to run a team of
+                    highly credible and strong leaders.
                 </p>
             </article>
         </section>
