Finished up for grading process
Ready to be graded for mid term grade

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h1>Hello, I'm Caleb Snow.<br />
       I'm a Junior Web Developer.
     </h1>
+    <img src="Me2.jpg" alt="">
   </article>
 
 
